Fix vertical alignment of navigation icon

--- a/theme/mischback/_src/style/components/header.scss
+++ b/theme/mischback/_src/style/components/header.scss
@@ -153,6 +153,7 @@ body > header {
           .nav-icon {
             width: 1.25em;
             height: 1.25em;
+            vertical-align: text-bottom;
           }
         }
       }
